k8s/setup/k8s-velero-patch-deployment.yml
---
apiVersion: v1
kind: Deployment
spec:
  template:
    spec:
      containers:
      - args:
        - server
        command:
        - /velero
        name: velero
