k8s/setup/docker-registry.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2.6.2
          ports:
            - name: http
              containerPort: 5000
          volumeMounts:
            - name: image-store
              mountPath: "/var/lib/registry"
      volumes:
        - name: image-store
          persistentVolumeClaim:
            claimName: docker-registry-pv-claim

---
kind: Service
apiVersion: v1
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    app: docker-registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-staging-registry
  name: docker-registry
  namespace: docker-registry
spec:
  tls:
    - hosts:
        - docker.smith-simms.family
      secretName: registry-tls
  rules:
    - host: docker.smith-simms.family
      http:
        paths:
          - backend:
              serviceName: docker-registry
              servicePort: 5000
            path: /
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.45
